--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ ipython==8.12.3
 matplotlib==3.7.5
 numpy==1.23.0
 opencv_contrib_python==4.10.0.82
-opencv_python==4.9.0.80
+opencv_python
 packaging==24.1
 pandas==2.0.3
 params_proto==2.12.1
